# war-board-game

./: .flake8  .gitignore  Dockerfile.jenkins  Jenkinsfile  LICENSE  Makefile  README.md  TODO.md  dev-config.sh  docker-compose.jenkins.yml  main.py  main_gui.py  pyproject.toml  requirements.txt  run_gui.py
.github/workflows/: ci-cd-simple.yml  ci-cd-test.yml  ci-cd.yml  debug.yml  test-simple.yml
country/: country.py
dados/: dados.py
data/: map.json  missions.json
docs/: COMANDOS_PRINCIPAIS.md  DOCKER_JENKINS.md  JENKINS_SETUP.md  JENKINS_USAGE.md  PIPELINE_JENKINS.md  ROTEIRO_APRESENTACAO_C14.md
player.py/: player.py
scripts/: create_package.sh  install_build_tools.sh  install_dependencies.sh  install_lint_tools.sh  run_tests.sh  send_notification.py  setup_environment.sh  setup_jenkins_local.sh  setup_pygame_tests.sh
tests/: test_card.py  test_deck.py  test_game.py  test_gui.py  test_interface.py  test_menu.py  test_player.py  test_pygame.py  test_pygame_safe.py  test_territory.py  test_turn_system.py  test_utils.py  test_utils_data.py
war/: Deck.py  card.py  continent.py  deck.py  enums.py  game.py  interface.py  player.py  territory.py  utils.py  utils_data.py
war/gui/: __init__.py  game_app.py
war/gui/screens/: __init__.py  dealer_selection.py  game_screen.py  main_menu.py  player_setup.py
war/gui/utils/: __init__.py  constants.py
