[project]
name = "war"
version = "0.1.0"
description = "projeto para aprende versionamento de código, gerenciamento de dependências e testes unitários"
authors = [
    {name = "Pedro Henrique Duarte Frugoli",email = "pedro.frugoli@ges.inatel.br"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
